--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "expo": "^47.0.6",
+    "expo-constants": "~14.0.2",
+    "expo-intent-launcher": "~10.3.1",
+    "expo-local-authentication": "~13.0.2",
+    "expo-splash-screen": "~0.17.5",
     "react": "18.1.0",
-    "react-native": "0.70.6"
+    "react-native": "0.70.6",
+    "react-native-device-info": "^10.3.0",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-reanimated": "^2.13.0",
+    "react-native-swipe-list-view": "^3.2.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
